--- a/base/plugin/dt-yarn-shell/dt-yarn-shell-core/pom.xml
+++ b/base/plugin/dt-yarn-shell/dt-yarn-shell-core/pom.xml
@@ -95,6 +95,13 @@
                             <tasks>
                                 <copy file="${basedir}/target/${project.name}-${project.version}.jar"
                                       tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+                                <copy todir="${basedir}/../../../../plugin/dtyarnshell/"
+                                      file="${basedir}/target/${project.name}-${git.branch}.jar"/>
+                                <delete>
+                                    <fileset dir="${basedir}/../../../../plugin/dtyarnshell/"
+                                             includes="${project.name}-*.jar"
+                                             excludes="${project.name}-${git.branch}.jar"/>
+                                </delete>
                             </tasks>
                         </configuration>
                     </execution>
