--- a/base/plugin/rdbs/mysql/pom.xml
+++ b/base/plugin/rdbs/mysql/pom.xml
@@ -87,6 +87,13 @@
                             <tasks>
                                 <move file="${basedir}/target/${project.name}-${project.version}.jar"
                                       tofile="${basedir}/target/${project.name}-${git.branch}.jar" />
+                                <copy todir="${basedir}/../../../../plugin/mysql/"
+                                      file="${basedir}/target/${project.name}-${git.branch}.jar"/>
+                                <delete>
+                                    <fileset dir="${basedir}/../../../../plugin/mysql/"
+                                             includes="${project.name}-*.jar"
+                                             excludes="${project.name}-${git.branch}.jar"/>
+                                </delete>
                             </tasks>
                         </configuration>
                     </execution>
