--- a/conf/node.yml
+++ b/conf/node.yml
@@ -1,15 +1,14 @@
 #engine
 slots: 10
-localAddress: localhost:8090
-#nodeZkAddress: node1:24002,node2:24002,node3:24002/xc_engine
-nodeZkAddress: 172.16.10.34:2181,172.16.10.45:2181,172.16.10.86:2181/engine
+localAddress: localhost:8080
+nodeZkAddress: kudu1:2181,kudu2:2181,kudu3:2181/engine_yx
 exeQueueSize: 1
 #debug模式关闭数据校验
 isDebug: true
 isSecurity: false
 
 db:
-   url: jdbc:mysql://172.16.10.45:3306/ide?charset=utf8&autoReconnect=true
+   url: jdbc:mysql://172.16.8.109:3306/ide_jiangbo?charset=utf8&autoReconnect=true
    userName: dtstack
    pwd: abc123
 
