ci: remove only

--- a/engine-ui/packages/console-ui/.gitlab-ci.yml
+++ b/engine-ui/packages/console-ui/.gitlab-ci.yml
@@ -15,9 +15,9 @@ code_quality:
   stage: lintjs
   script: 
     - "node ./node_modules/eslint/bin/eslint.js ./src/**/*.js"
-  only:
-    - branches
-    - merge_requests # not support current version
+  # only:
+  #   - branches
+  #   - merge_requests # not support current version
   except:
     - dev
     - master
@@ -26,9 +26,9 @@ test:
   stage: test
   script: 
     - "node ./node_modules/jest/bin/jest.js --no-cahe"
-  only:
-    - branches
-    - merge_requests # not support current version
+  # only:
+  #   - branches
+  #   - merge_requests # not support current version
   except:
     - dev
     - master
@@ -37,9 +37,9 @@ doc_quality:
   stage: lintdoc
   script: 
     - "node ./node_modules/lint-md/bin ./*.md docs/*.md"
-  only:
-    - branches
-    - merge_requests # not support current version
+  # only:
+  #   - branches
+  #   - merge_requests # not support current version
   except:
     - dev
     - master
