--- a/entrance/pom.xml
+++ b/entrance/pom.xml
@@ -57,6 +57,13 @@
 							<tasks>
 								<move file="${basedir}/target/${project.name}-${project.version}.jar"
 									  tofile="${basedir}/target/${project.name}-${git.branch}-with-dependencies.jar" />
+								<copy todir="${basedir}/../lib/"
+									  file="${basedir}/target/${project.name}-${git.branch}-with-dependencies.jar"/>
+								<delete>
+									<fileset dir="${basedir}/../lib/"
+											 includes="${project.name}-*.jar"
+											 excludes="${project.name}-${git.branch}-with-dependencies.jar"/>
+								</delete>
 							</tasks>
 						</configuration>
 					</execution>
