--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
 		<!--<module>base/plugin/flink140</module>-->
 		<!--<module>base/plugin/spark160-yarn</module>-->
 		<module>base/plugin/dt-yarn-shell</module>
-	</modules>
+        <module>base/plugin/kylin</module>
+    </modules>
 
 	<dependencies>
 	
