--- a/conf/node.yml
+++ b/conf/node.yml
@@ -1,14 +1,14 @@
 #engine
 slots: 10
-localAddress: localhost:8080
-nodeZkAddress: kudu1:2181,kudu2:2181,kudu3:2181/engine_yx
-exeQueueSize: 1
-#debug模式关闭数据校验
+#localAddress: 172.16.10.45:8090
+
+nodeZkAddress: node001:2181,node002:2181,node003:2181/engine
 isDebug: true
 isSecurity: false
+queueSize: 20
 
 db:
-   url: jdbc:mysql://172.16.8.109:3306/ide_jiangbo?charset=utf8&autoReconnect=true
+   url: jdbc:mysql://172.16.10.45:3306/ide?charset=utf8&autoReconnect=true
    userName: dtstack
    pwd: abc123
 
