ci: integrated typescript

--- a/engine-ui/packages/console-ui/.babelrc
+++ b/engine-ui/packages/console-ui/.babelrc
@@ -10,7 +10,7 @@
     ],
     "env": {
         "test": {
-          "presets": ["@babel/preset-env", "@babel/preset-react"]
+          "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"]
         }
     },
     "plugins": [
