--- a/engine-ui/packages/console-ui/.eslintrc.json
+++ b/engine-ui/packages/console-ui/.eslintrc.json
@@ -51,7 +51,7 @@
         "react/jsx-closing-bracket-location": 0,
         "jsx-a11y/no-static-element-interactions": 0,
         "react/prop-types": [0, {"ignore": ["children"]}],
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx", ".js", ".jsx"] }],
         "react/react-in-jsx-scope": 0
     }
 }
