--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -8,6 +8,8 @@
     "@handsontable/react": "^2.1.0",
     "@types/lodash": "^4.14.118",
     "@types/react": "^16.8.10",
+    "@types/react-dom": "16.8.4",
+    "@types/react-hot-loader": "4.1.0",
     "antd": "2.13.14",
     "codemirror": "5.25.0",
     "d3-selection": "1.1.0",
@@ -33,11 +35,11 @@
     "react-split-pane": "^0.1.84",
     "redux": "3.6.0",
     "redux-logger": "3.0.1",
-    "redux-thunk": "2.2.0",
-    "showdown": "1.9.0",
-    "regenerator-runtime": "^0.13.1",
-    "styled-components": "3.1.6",
     "redux-mock-store": "1.5.3",
+    "redux-thunk": "2.2.0",
+    "regenerator-runtime": "^0.13.1",
+    "showdown": "1.9.0",
+    "styled-components": "3.1.6",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
@@ -52,7 +54,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-stage-2": "^7.0.0",
-    "@commitlint/cli": "7.2.1",
+    "@babel/preset-typescript": "7.3.3",
+    "@commitlint/cli": "8.1.0",
     "@commitlint/config-angular": "7.1.2",
     "@types/jest": "^24.0.11",
     "babel-core": "7.0.0-bridge.0",
@@ -63,7 +66,7 @@
     "cache-loader": "1.1.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.11",
+    "css-loader": "3.1.0",
     "eslint": "5.9.0",
     "eslint-config-standard": "12.0.0",
     "eslint-loader": "1.7.1",
@@ -99,7 +102,7 @@
     "url-loader": "^1.0.1",
     "utils-merge": "1.0.1",
     "webpack": "^4.18.1",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.1.1",
     "webpack-dev-server": "3.2.1",
     "webpack-merge": "4.1.0",
