--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -1,9 +1,14 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "allowJs": true,
-        "outDir":"./tsDist",
+        "outDir":"./dist/",
         "baseUrl": ".",
+        "experimentalDecorators": true,
+        "noImplicitAny": true,
+        "allowJs": true,
+        "module": "commonjs",
+        "target": "es5",
+        "jsx": "react",
+        "allowSyntheticDefaultImports": true,
         "paths": {
             "utils/*": ["./src/utils/*"], // 工具文件夹
             "utils": ["./src/utils"], // 工具文件夹
@@ -19,5 +24,8 @@
     "exclude": [
         "node_modules",
         "dist",
+    ],
+    "include": [
+        "./src/**/*"
     ]
 }
