--- a/common/pom.xml
+++ b/common/pom.xml
@@ -92,5 +92,17 @@
 			<artifactId>ganymed-ssh2</artifactId>
 			<version>262</version>
 		</dependency>
+
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.2</version>
+		</dependency>
 	</dependencies>
 </project>
