ci(yml): add check types stage, move eslint from dev to ci stage

--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -12,6 +12,7 @@
     "@types/react-hot-loader": "4.1.0",
     "@types/react-redux": "7.1.1",
     "@types/react-router": "3.0.4",
+    "@types/react-router-redux": "5.0.18",
     "antd": "2.13.14",
     "codemirror": "5.25.0",
     "d3-selection": "1.1.0",
@@ -126,6 +127,7 @@
     "hotfix": "./scripts/hotfix.sh --b",
     "push-dev": "./scripts/push-dev.sh",
     "scp": "./scripts/scp.sh",
+    "check-types": "tsc",
     "lint-js": "node ./node_modules/eslint/bin/eslint.js ./src/**/*.js",
     "lint-doc": "node ./node_modules/lint-md/bin ./*.md docs/*.md",
     "fix-lint": "eslint ./src/**/*.js --fix && lint-md ./*.md docs/*.md --fix",
