--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -5,6 +5,7 @@
         "baseUrl": ".",
         "experimentalDecorators": true,
         "noImplicitAny": true,
+        "strictNullChecks": true,
         "allowJs": true,
         "module": "commonjs",
         "target": "es5",
