--- a/engine-ui/packages/console-ui/.gitlab-ci.yml
+++ b/engine-ui/packages/console-ui/.gitlab-ci.yml
@@ -16,7 +16,7 @@ stages:
 code_quality: 
   stage: lintjs
   script: 
-    - "node ./node_modules/eslint/bin/eslint.js ./src/**/*.js"
+    - npm run lint-js
   only:
     # Just support (fix, dev_, feat, issue) trigger test
     - /.*((f|F)ix|(d|D)ev_|(f|F)eat|(i|I)ssue|ref|style|perf|).*$/
@@ -29,7 +29,8 @@ code_quality:
 test:
   stage: test
   script: 
-    - "node ./node_modules/jest/bin/jest.js --no-cahe"
+    - npm run check-types
+    - npm run test
   only:
     # merge_requests # not support current version
     # Just support (fix, dev_, feat, issue) trigger test
@@ -43,7 +44,7 @@ test:
 doc_quality:
   stage: lintdoc
   script: 
-    - "node ./node_modules/lint-md/bin ./*.md docs/*.md"
+    - npm run lint-doc
   only:
     - merge_requests # not support current version
     - /.*(docs?|release).*$/
