--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-stack-web",
-  "version": "3.6.0-beta.4.1",
+  "version": "3.6.0",
   "description": "Making data valuable.",
   "main": "src/app.js",
   "license": "MIT",
