--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -62,6 +62,7 @@
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-angular": "7.1.2",
     "@types/jest": "^24.0.11",
+    "@types/webpack-env": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-core": "^7.0.0-bridge.0",
