--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -34,7 +34,7 @@
         "dist",
     ],
     "include": [
-        "./src/**/analyticsEngine/*",
+        // "./src/**/analyticsEngine/*",
         "./src/**/dataQuality/*"
     ]
 }
