--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -20,13 +20,13 @@
             "public/*": ["./src/public/*"], // 公共资源
             "config/*": ["./src/config/*"], // 数据文件，后期可能替换为借口
             "main/*": ["./src/webapps/main/*"],
-            "rdos/*": ["./src/webapps/rdos/*"],
-            "stream/*": ["./src/webapps/stream/*"],
-            "science/*": ["./src/webapps/science/*"],
-            "dataQuality/*": ["./src/webapps/dataQuality/*"],
-            "dataLabel/*": ["./src/webapps/dataLabel/*"],
-            "console/*": ["./src/webapps/console/*"],
-            "analyticsEngine/*": ["./src/webapps/analyticsEngine/*"],
+            // "rdos/*": ["./src/webapps/rdos/*"],
+            // "stream/*": ["./src/webapps/stream/*"],
+            // "science/*": ["./src/webapps/science/*"],
+            // "dataQuality/*": ["./src/webapps/dataQuality/*"],
+            // "dataLabel/*": ["./src/webapps/dataLabel/*"],
+            // "console/*": ["./src/webapps/console/*"],
+            // "analyticsEngine/*": ["./src/webapps/analyticsEngine/*"],
         }
     },
     "exclude": [
@@ -34,6 +34,6 @@
         "dist",
     ],
     "include": [
-        "./src/**/analyticsEngine/*",
+        "./src/**/rdos/*",
     ]
 }
