--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "@handsontable/react": "^2.1.0",
-    "@types/highlight.js": "9.12.3",
     "@types/d3-selection": "^1.4.1",
+    "@types/highlight.js": "9.12.3",
     "@types/lodash": "^4.14.118",
     "@types/react": "^16.8.10",
-    "@types/react-copy-to-clipboard": "4.2.6",
+    "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
     "@types/react-hot-loader": "4.1.0",
     "@types/react-redux": "7.1.1",
