--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -34,6 +34,8 @@
         "dist",
     ],
     "include": [
-        "src/**/*"
+        // "./src/**/analyticsEngine/*",
+        "./src/**/science/*",
+        "./src/typings/*"
     ]
 }
