fix(console & dataApi): fix the console & dataApi

--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -36,6 +36,7 @@
     "include": [
         // "./src/**/analyticsEngine/*",
         "./src/**/science/*",
-        "./src/typings/*"
+        "./src/typings/*",
+        "src/**/console/*"
     ]
 }
