--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -78,7 +78,7 @@
     "copy-webpack-plugin": "^5.0.3",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^3.1.0",
-    "eslint": "^5.9.0",
+    "eslint": "5.16.0",
     "eslint-config-standard": "12.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "2.14.0",
@@ -133,9 +133,9 @@
     "push-dev": "./scripts/push-dev.sh",
     "scp": "./scripts/scp.sh",
     "check-types": "tsc --skipLibCheck",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ./src/webapps/** --ext=.js,.ts,.tsx --cache --ignore-path .eslintignore",
+    "lint": "npx eslint --cache './src/**/*.ts' './src/**/*.tsx' './src/**/*.js'",
     "lint-doc": "node ./node_modules/lint-md/bin ./*.md docs/*.md",
-    "lint-fix": "eslint ./src/**/*.js ./src/**/*.ts ./src/**/*.tsx --fix && lint-md ./*.md docs/*.md --fix",
+    "lint-fix": "npx eslint './src/**/*.ts' './src/**/*.tsx' './src/**/*.js' --fix && lint-md ./*.md docs/*.md --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md && npm run changeissueurl",
     "changeissueurl": "replace 'http://git.dtstack.cn/dtstack/data-stack-web/issues/' 'http://redmine.prod.dtstack.cn/issues/' CHANGELOG.md"
   },
