feat(config): add src

--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -34,8 +34,7 @@
         "dist",
     ],
     "include": [
-        // "./src/**/analyticsEngine/*",
-        "./src/**/science/*",
+        "./src/**/*",
         "./src/typings/*"
     ]
 }
