--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -9,6 +9,8 @@
     "@types/d3-selection": "^1.4.1",
     "@types/highlight.js": "9.12.3",
     "@types/lodash": "^4.14.118",
+    "@types/object-assign": "^4.0.30",
+    "@types/qs": "^6.5.3",
     "@types/react": "^16.8.10",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
@@ -33,6 +35,7 @@
     "monaco-editor": "0.13.1",
     "object-assign": "4.1.1",
     "prop-types": "^15.6.2",
+    "qs": "^6.7.0",
     "react": "16.6.3",
     "react-copy-to-clipboard": "5.0.0",
     "react-dom": "16.6.3",
