refactor: typing codes

--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -32,8 +32,9 @@
     "exclude": [
         "node_modules",
         "dist",
+        "src/public/**/*"
     ],
     "include": [
-        "src/**/rdos/*"
+        "src/**/*"
     ]
 }
