--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -71,6 +71,7 @@
     "@commitlint/config-angular": "7.1.2",
     "@types/echarts": "^4.1.9",
     "@types/jest": "^24.0.11",
+    "@types/redux-mock-store": "1.0.1",
     "@types/webpack-env": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "1.13.0",
