refactor(vscode): change eslint config

--- a/engine-ui/packages/console-ui/.vscode/settings.json
+++ b/engine-ui/packages/console-ui/.vscode/settings.json
@@ -3,5 +3,11 @@
     "standard.enable": false,
     "eslint.enable": true,
     "typescript.tsdk": "node_modules/typescript/lib",
-    "javascript.implicitProjectConfig.experimentalDecorators": true
+    "javascript.implicitProjectConfig.experimentalDecorators": true,
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
+    ]
 }
