--- a/engine-ui/packages/console-ui/.vscode/settings.json
+++ b/engine-ui/packages/console-ui/.vscode/settings.json
@@ -1,5 +1,6 @@
 // 将设置放入此文件中以覆盖默认值和用户设置。
 {
+    "prettier.tabWidth": 4,
     "standard.enable": false,
     "eslint.enable": true,
     "typescript.tsdk": "node_modules/typescript/lib",
@@ -7,7 +8,15 @@
     "eslint.validate": [
         "javascript",
         "javascriptreact",
-        "typescript",
-        "typescriptreact"
-    ]
+        {
+            "language": "typescript",
+            "autoFix": true
+        },
+        {
+            "language": "typescriptreact",
+            "autoFix": true
+        }
+    ],
+    "eslint.alwaysShowStatus": true,
+    "eslint.autoFixOnSave": true
 }
