--- a/engine-ui/packages/console-ui/package.json
+++ b/engine-ui/packages/console-ui/package.json
@@ -116,8 +116,8 @@
     "strip-ansi": "3.0.1",
     "style-loader": "^0.21.0",
     "stylelint-config-standard": "18.2.0",
+    "terser-webpack-plugin": "1.4.1",
     "typescript": "3.5.3",
-    "uglifyjs-webpack-plugin": "2.1.3",
     "url-loader": "^1.0.1",
     "utils-merge": "1.0.1",
     "webpack": "^4.32.2",
