--- a/pom.xml
+++ b/pom.xml
@@ -19,19 +19,19 @@
 		<!--<module>base/plugin/spark</module>-->
 		<module>web</module>
 		<module>service</module>
-		<module>base/plugin/spark-yarn</module>
-		<module>base/plugin/odps</module>
-		<module>base/plugin/rdbs</module>
-		<module>base/plugin/hadoop</module>
-		<module>base/plugin/learning</module>
+		<!--<module>base/plugin/spark-yarn</module>-->
+		<!--<module>base/plugin/odps</module>-->
+		<!--<module>base/plugin/rdbs</module>-->
+		<!--<module>base/plugin/hadoop</module>-->
+		<!--<module>base/plugin/learning</module>-->
 		<module>base/plugin/flink150</module>
-		<module>base/plugin/flink170</module>
-		<module>base/plugin/flink180</module>
+		<!--<module>base/plugin/flink170</module>-->
+		<!--<module>base/plugin/flink180</module>-->
 <!--		<module>base/plugin/flink130</module>-->
 <!--		<module>base/plugin/flink140</module>-->
 <!--		<module>base/plugin/spark160-yarn</module>-->
-		<module>base/plugin/dt-yarn-shell</module>
-        <module>base/plugin/kylin</module>
+		<!--<module>base/plugin/dt-yarn-shell</module>-->
+        <!--<module>base/plugin/kylin</module>-->
     </modules>
 
 	<dependencies>
