--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<module>entrance</module>
 		<module>common</module>
 		<module>base/common</module>
-		<module>base/plugin/spark</module>
+		<!--<module>base/plugin/spark</module>-->
 		<module>web</module>
 		<module>service</module>
 		<module>base/plugin/spark-yarn</module>
@@ -27,7 +27,7 @@
 		<module>base/plugin/flink150</module>
 		<module>base/plugin/flink170</module>
 		<module>base/plugin/flink180</module>
-		<module>base/plugin/spark160-yarn</module>
+		<!--<module>base/plugin/spark160-yarn</module>-->
 		<module>base/plugin/dt-yarn-shell</module>
         <module>base/plugin/kylin</module>
     </modules>
