--- a/base/common/pom.xml
+++ b/base/common/pom.xml
@@ -14,6 +14,7 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spark.hadoop.version>2.7.3</spark.hadoop.version>
 	</properties>
 	<build>
 		<resources>
@@ -56,6 +57,21 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.0.23</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-yarn-api</artifactId>
+			<version>${spark.hadoop.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-yarn-client</artifactId>
+			<version>${spark.hadoop.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
