--- a/base/common/pom.xml
+++ b/base/common/pom.xml
@@ -14,7 +14,7 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spark.hadoop.version>2.7.3</spark.hadoop.version>
+		<hadoop.version>2.4.1</hadoop.version>
 	</properties>
 	<build>
 		<resources>
@@ -63,14 +63,14 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-yarn-api</artifactId>
-			<version>${spark.hadoop.version}</version>
+			<version>${hadoop.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-yarn-client</artifactId>
-			<version>${spark.hadoop.version}</version>
+			<version>${hadoop.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
