--- a/base/plugin/learning/learning-client/pom.xml
+++ b/base/plugin/learning/learning-client/pom.xml
@@ -21,6 +21,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.dtstack.rdos</groupId>
+            <artifactId>plugin.base</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.dtstack</groupId>
             <artifactId>learning</artifactId>
             <version>${learning.version}</version>
