--- a/base/plugin/kylin/pom.xml
+++ b/base/plugin/kylin/pom.xml
@@ -23,6 +23,12 @@
             <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.dtstack.rdos</groupId>
+            <artifactId>plugin.base</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
