--- a/base/plugin/rdbs/common/pom.xml
+++ b/base/plugin/rdbs/common/pom.xml
@@ -25,6 +25,12 @@
             <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.dtstack.rdos</groupId>
+            <artifactId>plugin.base</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
