--- a/base/plugin/spark/pom.xml
+++ b/base/plugin/spark/pom.xml
@@ -30,6 +30,12 @@
 		   <version>1.0.0</version>
 		   <scope>provided</scope>
 		</dependency>
+
+		<dependency>
+		  <groupId>com.dtstack.rdos</groupId>
+		  <artifactId>plugin.base</artifactId>
+		  <version>1.0.0</version>
+		</dependency>
   
 		<dependency>
 			<groupId>org.apache.spark</groupId>
