--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<!--<module>base/plugin/spark</module>-->
 		<module>web</module>
 		<module>service</module>
+		<module>base/plugin/base</module>
 		<module>base/plugin/spark-yarn</module>
 		<module>base/plugin/odps</module>
 		<module>base/plugin/rdbs</module>
