[修复dtyarnshell和learning解析环境参数异常][【engine】对所有的任务在解析环境参数失败时，直接让任务failed而不是在catch住异常后被转为了judgeSolt=false，如下Learning][18637]

--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,17 @@
 		<module>web</module>
 		<module>service</module>
 		<module>base/plugin/base</module>
-		<!--<module>base/plugin/spark-yarn</module>-->
-		<!--<module>base/plugin/odps</module>-->
-		<!--<module>base/plugin/rdbs</module>-->
-		<!--<module>base/plugin/hadoop</module>-->
-		<!--<module>base/plugin/learning</module>-->
-		<!--<module>base/plugin/flink150</module>-->
-		<!--<module>base/plugin/flink170</module>-->
-		<!--<module>base/plugin/flink180</module>-->
+		<module>base/plugin/spark-yarn</module>
+		<module>base/plugin/odps</module>
+		<module>base/plugin/rdbs</module>
+		<module>base/plugin/hadoop</module>
+		<module>base/plugin/learning</module>
+		<module>base/plugin/flink150</module>
+		<module>base/plugin/flink170</module>
+		<module>base/plugin/flink180</module>
 		<!--<module>base/plugin/spark160-yarn</module>-->
 		<module>base/plugin/dt-yarn-shell</module>
-        <!--<module>base/plugin/kylin</module>-->
+        <module>base/plugin/kylin</module>
     </modules>
 
 	<dependencies>
