--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<module>base/plugin/hadoop</module>
 		<module>base/plugin/learning</module>
 		<module>base/plugin/flink150</module>
-		<module>base/plugin/flink170</module>
+		<!--<module>base/plugin/flink170</module>-->
 		<module>base/plugin/flink180</module>
 		<!--<module>base/plugin/spark160-yarn</module>-->
 		<module>base/plugin/dt-yarn-shell</module>
