--- a/base/plugin/rdbs/postgresql/pom.xml
+++ b/base/plugin/rdbs/postgresql/pom.xml
@@ -24,17 +24,12 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.postgresql</groupId>-->
-            <!--<artifactId>postgresql</artifactId>-->
-            <!--<version>42.2.2</version>-->
-        <!--</dependency>-->
-
         <dependency>
-            <groupId>com.huawei</groupId>
-            <artifactId>gsjdbc4</artifactId>
-            <version>1</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
         </dependency>
+
     </dependencies>
 
     <build>
