--- a/engine-ui/packages/console-ui/tsconfig.json
+++ b/engine-ui/packages/console-ui/tsconfig.json
@@ -28,7 +28,7 @@
             "dataLabel/*": ["./src/webapps/dataLabel/*"],
             "console/*": ["./src/webapps/console/*"],
             "analyticsEngine/*": ["./src/webapps/analyticsEngine/*"],
-            "database": ["./src/database"], // 数据库
+            "database": ["./src/database"] // 数据库
         }
     },
     "exclude": [
